refactor: update log format key for timestamp from "timestamp" to "at"

--- a/src-py/log_config.json
+++ b/src-py/log_config.json
@@ -15,7 +15,7 @@
         "json": {
             "()": "log_utils.JSONFormatter",
             "fmt_keys": {
-                "timestamp": "timestamp",
+                "at": "timestamp",
                 "level": "levelname",
                 "logger": "name",
                 "thread": "threadName",
